--- a/views/home.html
+++ b/views/home.html
@@ -3,8 +3,8 @@
 <head>
     <title>Bookmark App</title>
 </head>
-<body>
-<div class="panel panel-default">
+<body  style="position:absolute;height:100%;width:100%">
+<div class="panel panel-default" style="height:97%;">
     <div class="panel-heading"><h4>Bookmark App</h4></div>
     <div class="panel-body">
         <div id="content"></div>
